--- a/WpfChess/Authorization.xaml
+++ b/WpfChess/Authorization.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Авторизация игроков" Height="800" Width="800" Background="{DynamicResource BackgroundColor}">
     <Grid>
-        <Border>
+        <Border Margin="6" BorderThickness="5">
             <StackPanel>
                 <TextBlock FontSize="50" FontWeight="Bold" HorizontalAlignment="Center" Margin="10">Игрок 1</TextBlock>
                 <TextBox Name="tbFirstPlayer" FontSize="40" Height="70" Width="500" Margin="10" HorizontalContentAlignment="Center"></TextBox>
