--- a/WpfChess/Game.xaml
+++ b/WpfChess/Game.xaml
@@ -8,7 +8,7 @@
         Title="Game"  Height="800" Width="800" Background="{DynamicResource BackgroundColor}">
 
     <Grid>
-        <Border>
+        <Border Margin="6" BorderThickness="5">
             <Canvas Name="Field" SizeChanged="Field_SizeChanged"></Canvas>
         </Border>
     </Grid>
