--- a/WpfChess/MainWindow.xaml
+++ b/WpfChess/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="800" Background="{DynamicResource BackgroundColor}">
     <Grid>
-        <Border>
-            <StackPanel>
+        <Border Margin="6" BorderThickness="5">
+        <StackPanel>
                 <TextBlock Margin="110" Text="Chess" HorizontalAlignment="Center" FontSize="90" FontWeight="DemiBold" Foreground="DarkBlue"/>
                 <Button Click="BtnStartGame_Click" Margin="6">НАЧАТЬ ИГРУ</Button>
                 <Button Click="BtnContinue_Click" Margin="6">ПРОДОЛЖИТЬ</Button>
